--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <a href="emailcalculator.html">emailcalculator</a>
+    <a href="emailcalculator.html">MicroProjectsCalculator</a>
     <div id="app"></div>
     <div id="prod-calc"></div>
     <div class="emailcalculator"></div>
