feat(microprojects): add main MP calc with VPC sub calc

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -14,10 +13,12 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <a href="emailcalculator.html">MicroProjectsCalculator</a>
+    <a href="emailcalculator.html">emailcalculator</a>
+    <a href="microprojectscalculator.html">microprojectscalculator</a>
     <div id="app"></div>
     <div id="prod-calc"></div>
     <div class="emailcalculator"></div>
+    <div class="microprojectscalculator"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
